--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>VinFlix</title>
 </head>
 <body>
-    
+  <header>
+    <h1>Velozes e furiosos 12</h1>
+  </header> 
+  <section>
+    <div>
+        <h1>Com a participação especial de Van-Daime.</h1>
+        <p>#VelozeseFuriosos12</p>
+    </div>
+  </section> 
 </body>
 </html>
