--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>VinFlix</title>
 </head>
 <body>
@@ -13,6 +14,7 @@
     <div>
         <h1>Com a participação especial de Van-Daime.</h1>
         <p>#VelozeseFuriosos12</p>
+        <iframe width="1230" height="692" src="https://www.youtube.com/embed/LPLPz92BMDk" title="FAST X: Part 2 (2025) - First Trailer | Vin Diesel" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
   </section> 
 </body>
