--- a/index.html
+++ b/index.html
@@ -14,8 +14,30 @@
     <div>
         <h1>Com a participação especial de Van-Daime.</h1>
         <p>#VelozeseFuriosos12</p>
-        <iframe width="1230" height="692" src="https://www.youtube.com/embed/LPLPz92BMDk" title="FAST X: Part 2 (2025) - First Trailer | Vin Diesel" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="1230" height="692" src="https://www.youtube.com/watch?v=WNGSBXA7XG8" title="FAST X: Part 2 (2025) - First Trailer | Vin Diesel" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
-  </section> 
+  </section>
+
+
+  </section>
+  <h2> Mais vídeos</h2>
+  <div>
+    <a href="https://www.youtube.com/watch?v=yg2KAjyxzBM">
+      <img src="https://img.youtube.com/vi/yg2KAjyxzBM/maxresdefault.jpg">
+    </a>
+
+    <a href="https://www.youtube.com/watch?v=dvC58q7PHG4">
+      <img src="https://img.youtube.com/vi/dvC58q7PHG4/maxresdefault.jpg">
+    </a>
+
+      <a href="https://www.youtube.com/watch?v=pgodQwuynaY">
+        <img src="https://img.youtube.com/vi/pgodQwuynaY/maxresdefault.jpg">
+      </a>
+
+        <a href="https://www.youtube.com/watch?v=trB1n3vMqYw">
+          <img src="https://img.youtube.com/vi/trB1n3vMqYw/maxresdefault.jpg">
+        </a>
+
+  </div>
 </body>
 </html>
