--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <a href="https://www.youtube.com/watch?v=trB1n3vMqYw">
           <img src="https://img.youtube.com/vi/trB1n3vMqYw/maxresdefault.jpg">
         </a>
-
   </div>
+</section>
 </body>
 </html>
