--- a/index.html
+++ b/index.html
@@ -3,41 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>VinFlix - Velozes e Furiosos</title>
     <link rel="stylesheet" href="style.css">
-    <title>VinFlix</title>
+    <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&family=Boldonse&family=Cinzel:wght@400..900&family=Lemon&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Russo+One&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header>
-    <h1>Velozes e furiosos 12</h1>
-  </header> 
-  <section>
-    <div>
-        <h1>Com a participação especial de Van-Daime.</h1>
-        <p>#VelozeseFuriosos12</p>
-        <iframe width="1230" height="692" src="https://www.youtube.com/watch?v=WNGSBXA7XG8" title="FAST X: Part 2 (2025) - First Trailer | Vin Diesel" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <header>
+        <h1>VINFLIX</h1>
+    </header>
+
+    <section>
+        <div class="chamada-texto">
+            <h1>Velozes e Furiosos 12</h1>
+            <p>Com a participação especial de Van-Daime</p>
+            <p>#VelozeseFuriosos12</p>
+        </div>
+    </section>
+
+    <div class="categoria">
+        <h2>Trailer Principal</h2>
+        <div class="categoria-videos">
+            <iframe width="1230" height="692" src="https://www.youtube.com/embed/WNGSBXA7XG8" title="FAST X: Part 2 (2025)" frameborder="0" allowfullscreen></iframe>
+        </div>
     </div>
-  </section>
 
-
-  </section>
-  <h2> Mais vídeos</h2>
-  <div>
-    <a href="https://www.youtube.com/watch?v=yg2KAjyxzBM">
-      <img src="https://img.youtube.com/vi/yg2KAjyxzBM/maxresdefault.jpg">
-    </a>
-
-    <a href="https://www.youtube.com/watch?v=dvC58q7PHG4">
-      <img src="https://img.youtube.com/vi/dvC58q7PHG4/maxresdefault.jpg">
-    </a>
-
-      <a href="https://www.youtube.com/watch?v=pgodQwuynaY">
-        <img src="https://img.youtube.com/vi/pgodQwuynaY/maxresdefault.jpg">
-      </a>
-
-        <a href="https://www.youtube.com/watch?v=trB1n3vMqYw">
-          <img src="https://img.youtube.com/vi/trB1n3vMqYw/maxresdefault.jpg">
-        </a>
-  </div>
-</section>
+    <div class="categoria">
+        <h2>Mais Vídeos</h2>
+        <div class="categoria-videos">
+            <a href="https://www.youtube.com/watch?v=yg2KAjyxzBM" target="_blank">
+                <img src="https://img.youtube.com/vi/yg2KAjyxzBM/maxresdefault.jpg" alt="Velozes e Furiosos 10">
+            </a>
+            <a href="https://www.youtube.com/watch?v=dvC58q7PHG4" target="_blank">
+                <img src="https://img.youtube.com/vi/dvC58q7PHG4/maxresdefault.jpg" alt="Velozes e Furiosos 9">
+            </a>
+            <a href="https://www.youtube.com/watch?v=pgodQwuynaY" target="_blank">
+                <img src="https://img.youtube.com/vi/pgodQwuynaY/maxresdefault.jpg" alt="Velozes e Furiosos 8">
+            </a>
+            <a href="https://www.youtube.com/watch?v=trB1n3vMqYw" target="_blank">
+                <img src="https://img.youtube.com/vi/trB1n3vMqYw/maxresdefault.jpg" alt="Velozes e Furiosos 7">
+            </a>
+        </div>
+    </div>
 </body>
 </html>
